--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+PyAudio
+simpleaudio
+
+
 numpy
 openai_whisper
 torch
@@ -6,7 +10,6 @@ torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
 numpy==1.21.5
 openai_whisper==20230117
-PyAudio==0.2.12
 pydub==0.25.1
 pyrubberband==0.3.0
 pytube==12.1.2
@@ -17,4 +20,3 @@ whisper==1.1.10
 streamlit
 watchdog
 
-simpleaudio
